@@ -5,6 +5,8 @@ attlist.tryton &= empty
 data = element data { attlist.data, (record | menuitem)* }
 attlist.data &=
   [ a:defaultValue = "0" ] attribute noupdate { "0" | "1" }?
+attlist.data &=
+  [ a:defaultValue = "0" ] attribute grouped { "0" | "1" }?
 record = element record { attlist.record, field* }
 attlist.record &= attribute model { text }
 attlist.record &= attribute id { text }
